src/objects/Marketing_Fund__c.object
<CustomObject>
    <description>Branding</description>
    <fields>
        <fullName>Amount__c</fullName>
        <inlineHelpText>What is the amount of Branding Award, TMI, BMI</inlineHelpText>
        <label>Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Opportunity__c</fullName>
        <label>Opportunity</label>
        <referenceTo>Opportunity</referenceTo>
        <relationshipLabel>Marketing Funds</relationshipLabel>
        <relationshipName>Marketing_Funds</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Type__c</fullName>
        <label>Type</label>
        <picklist>
            <picklistValues>
                <fullName>Branding Award</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>TMI</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BMI</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <label>Marketing Fund</label>
    <nameField>
        <displayFormat>MF-{0000}</displayFormat>
        <label>Marketing Fund Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Marketing Funds</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>